--- a/DBML.Console/DBML.Console.csproj
+++ b/DBML.Console/DBML.Console.csproj
@@ -62,6 +62,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MyCustom.dbml</DependentUpon>
     </Compile>
+    <Compile Include="MyCustom\Customer.cs" />
     <Compile Include="Orders.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
